# open-sea

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  README.md  run_clang_tidy.sh
data/: CMakeLists.txt  README.md
data/shaders/: ImGui.fshader  ImGui.vshader  Test.fshader  Test.vshader
doc/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
examples/sample-game/: CMakeLists.txt  README.md  SampleGame.cpp
include/: README.md
include/open-sea/: CameraMove.h  Components.h  Controls.h  Debug.h  Debuggable.h  Delta.h  Entity.h  GL.h  ImGui.h  Input.h  Log.h  Model.h  Profiler.h  Render.h  Systems.h  Table.h  Test.h  Track.h  Util.h  Window.h  config.h.in
src/: CMakeLists.txt  CameraMove.cpp  Components.cpp  Controls.cpp  Debug.cpp  Delta.cpp  Entity.cpp  GL.cpp  ImGui.cpp  Input.cpp  Log.cpp  Model.cpp  Profiler.cpp  README.md  Render.cpp  Systems.cpp  Test.cpp  Track.cpp  Window.cpp
